# data-engineer-zoomcamp

./: .gitignore  README.md  pyproject.toml
week1/1_TERRAFORM/terraform/: .terraform.lock.hcl
week1/2_DOCKER_SQL/: compose.yaml
week2/: Dockerfile  etl_parent_flow-deployment.yaml  etl_parent_gcs_to_bq_flow-deployment.yaml  homework.md
week2/02_gcp/: etl_gcs_to_bq.py  etl_web_to_gcp.py
week2/03_deployment/: etl_gcs_to_bq_flow.py  parameterized_flow.py
week2/intro_to_prefect/: ingest_data.py
week3/: homework.md
week4/src/dbt/taxi_ride_ny/: dbt_project.yml
week4/src/dbt/taxi_ride_ny/models/core/: fact_trips.sql
week4/src/dbt/taxi_ride_ny/models/example/: schema.yml
week4/src/dbt/taxi_ride_ny/models/staging/: stg_fhv_trip_data.sql  (+1 more)
week_1_basics_n_setup/2_DOCKER_SQL/: pipeline.py  test.ipynb
week_2_workflow_orchestration/: Dockerfile  README.md  etl_parent_gcs_to_bq_flow-deployment.yaml
week_2_workflow_orchestration/02_gcp/: etl_gcs_to_bq.py  etl_web_to_gcp.py
week_2_workflow_orchestration/03_deployment/: config_schema_web_to_gcs.py  docker_deploy.py  etl_gcs_to_bq_flow.py  parameterized_flow.py
week_2_workflow_orchestration/blocks/: make_docker_block.py
week_3_data_warehouse/: README.md
week_4_analytics_engineering/: README.md  homework.md
week_4_analytics_engineering/src/: .dockerignore  compose.yaml
week_4_analytics_engineering/src/dbt/taxi_ride_ny/: dbt_project.yml
week_4_analytics_engineering/src/dbt/taxi_ride_ny/macros/: get_patment_type_description.sql
week_5_batch_processing/: README.md  docker-compose.yml
week_5_batch_processing/src/: 06_spark_sql.ipynb  07_groupby_join.ipynb  download_data.sh  homework5.ipynb  taxi.ipynb  week5.ipynb
week_6_stream_processing/: README.md
week_6_stream_processing/docker/: docker-compose.yml
week_6_stream_processing/src/: consumer.py  producer.py  ride.py  settings.py  streaming-notebook.ipynb
week_6_stream_processing/src/homework/: README.md  consumer.py  producer.py  settings.py
week_7_project/: README.md  pyproject.toml
week_7_project/airflow/: README.md  docker-compose.yaml  setup.sh
week_7_project/airflow/dags/: load_express_sensor_to_bq.py
week_7_project/dbt/: Dockerfile  README.md
week_7_project/dbt/dbt/express_way/: dbt_project.yml
week_7_project/dbt/dbt/express_way/models/core/: fact_express_way_dayofweek.sql  fact_express_way_hourofday.sql  schema.yml
week_7_project/kafka/: README.md  config.py  consumer.py  docker-compose.yml  producer_police_locations.py
week_7_project/kafka/data/: generate_location.py  generate_police.py
week_7_project/kafka/kafka-connect/config/sink/: connector_sink_express.config
week_7_project/kafka/schema/: police_schema.json
week_7_project/kafka/src/: config.py  consumer.py  producer.py
week_7_project/kafka/streaming/: README.md
week_7_project/terraform/: README.md  main.tf  variable.tf
(+7 files in other folders)
