[tool.poetry]
name = "data-engineer-zoomcamp"
version = "0.1.0"
description = ""
authors = ["nattawat"]
readme = "README.md"
packages = [{include = "data_engineer_zoomcamp"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.2"
prefect = "2.7.7"
prefect-sqlalchemy = "0.2.2"
prefect-gcp = { version = "0.2.4", extras = ["cloud_storage"] }
protobuf = "4.21.11"
pyarrow = "10.0.1"
pandas-gbq = "0.18.1"
psycopg2-binary = "2.9.5"
SQLAlchemy = "1.4.46"
greenlet = "^2.0.2"
prefect-slack = "0.1.2"
prefect-alert = "0.1.3"
prefect-docker = "0.1.0"
prefect-dbt = "0.2.7"
prefect-github = "0.1.5"
prefect-great-expectations = "0.1.0"
prefect-shell = "0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
