[tool.poetry]
name = "streaming-nationalrail-uk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "streaming_nationalrail_uk"}]

[tool.poetry.dependencies]
python = "^3.9"
stomp-py = ">=8.0.0"
pyxb = ">=1.2.6,<1.3.0"
kafka-python = "1.4.6"
confluent-kafka = "^2.0.2"
faker = "^18.3.1"
geopy = "^2.3.0"
tqdm = "^4.65.0"
requests = "^2.28.2"
jsonschema = "^4.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
